feat: legger til beregnede grunnlag til grunnlagliste